# moddable

./: .editorconfig  .gitignore  CMakeLists.txt  contributing.md  eslint.config.mjs  readme.md  warner.makefile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-release.yaml  crash.yaml  smoke-test.yaml
bundles/: tempout.0.cjs  tempout.1.cjs  tempout.2.cjs  tempout.3.cjs  tempout.4.cjs  tempout.5.cjs
contributed/challenge/: main.js  manifest.json  readme.md
contributed/charlieplexer/: README.md  main.js  manifest.json
contributed/cli/: README.md  cli.c  cli.h  manifest.json  screen.h
contributed/conversationalAI/: Controller.js  ScrollerBehaviors.js  View.js  assets.js  main.js  manifest.json  model.json  readme.md
contributed/effects/: readme.md
contributed/first-run-moddable-four/: Controller.js  Transition.js  View.c  View.js  assets.js  main.js  manifest.json  model.js
contributed/giphy/: main.js  manifest.json  readme.md  screens.js
contributed/httpbridge/: README.md  main.js  manifest.json
contributed/jsonparser/: LICENSE  README.md  jsonparser.c  jsonparser.js  jsonparser.rl  manifest.json
contributed/modClock/: buttons.js  main.c  main.js  manifest.json  nice-colors.js  prefs.js  readme.md  sevenseg.js  styles.js  update.js  web.js
contributed/router/: README.md  router.js
contributed/serial/: SerialModule.md  manifest.json  modSerial.h  serial.c  serial.js
contributed/somafm/: ScrollerBehaviors.js  channels.js  main.js  manifest.json
contributed/window-display-moddable-one/: assets.js  main.js  manifest.json  readme.md  screens.js
contributed/window-display-moddable-three/: assets.js  main.js  manifest.json  screens.js
documentation/: Commodetto.md  Moddable SDK - Getting Started.md  Moddable SDK - Keeping Up To Date.md  Moddable SDK – Getting Started.md  SPI display for ESP8266.md  Squeezing modern JavaScript onto ESP8266.md  XS Platforms.md  defines.md  embedded javascript development with xs6.md  geckoConfiguration.md  moddablezero.md  piu.md  readme.md  xs6 for esp.md  xs6 for zephyr.md  xs6-esp host interfaces.md
documentation/base/: base.md  setup.md  worker.md
documentation/commodetto/: Creating fonts for Moddable applications.md  commodetto.md  poco.md
documentation/crypt/: crypt.md
documentation/data/: data.md
documentation/devices/: esp32.md  esp8266.md  linemb.md  m5core_ink.md  m5paper.md  moddable-display.md  moddable-four.md  moddable-one.md  moddable-six.md  moddable-three.md  moddable-two.md  moddable-zero.md  nRF52-low-power.md  nrf52.md  pico.md  wasm.md  zephyr.md
documentation/displays/: readme.md  wiring-guide-adafruit-1.8-st7735.md  wiring-guide-adafruit-OLED.md  wiring-guide-crystalfontz-eink.md  wiring-guide-dotstar.md  wiring-guide-generic-1.44-spi.md  wiring-guide-generic-2.4-spi-esp32.md  wiring-guide-generic-2.4-spi-pico.md  wiring-guide-generic-2.4-spi.md  wiring-guide-generic-2.8-CPT-spi.md  wiring-guide-sharp-memory-1.3-spi.md  wiring-guide-sharp-memory-2.7-spi.md  wiring-guide-sparkFun-teensyview-spi.md  wiring-guide-switch-science-LCD.md
documentation/draft/: XS7 @ TC-39.md
documentation/files/: files.md
documentation/io/: cluster.md  firmata.md  io.md
documentation/network/: ethernet.md  network.md  securesocket.md  webthings.md
documentation/pins/: audioout.md  pins.md
documentation/piu/: ae motion export.md  die-cut.md  expanding-keyboard.md  keyboard.md  localization.md  piu.md
documentation/tools/: defines.md  manifest.md  testing.md  tools.md
documentation/xs/: ROM Colors.md  XS Compartment.md  XS Conformance.md  XS Differences.md  XS FFI.md  XS Marshalling.md  XS Platforms.md  XS Profiler.md  XS Scopes.md  XS in C.md  XS linker warnings.md  handle.md  mods.md  preload.md  xsbug.md  xst.md
examples/: manifest.json  manifest_base.json  manifest_cli.json  manifest_commodetto.json  manifest_mod.json  manifest_net.json  manifest_piu.json  manifest_typings.json  readme.md
examples/cli/: main.js  manifest.json
examples/commodetto/: manifest_commodetto.json  readme.md
examples/drivers/: readme.md
examples/helloworld/: main.js  manifest.json
examples/io/: readme.md
examples/piu/: all.json  readme.md
licenses/: NOTICE  readme.md
modules/commodetto/: cfe8x8.c  cfeBMF.c  cfeNFNT.c  commodettoBMPOut.js  commodettoBitmap.c  commodettoBitmap.h  commodettoBitmap.js  commodettoBitmapFormat.h  commodettoBufferOut.c  commodettoBufferOut.js  commodettoColorCellOut.c  commodettoColorCellOut.js  commodettoConvert.c  commodettoConvert.h  commodettoConvert.js  commodettoDither.c  (+35 more)
tools/: VERSION  adpcm-dns.c  adpcm-lib.c  adpcm-lib.h  ae2piu.jsx  bles2gatt.js  buildclut.js  cdv.js  colorcellencode.js  compileDataView.js  compressbmf.js  dvi_adpcm_encode.c  ffi.js  file.js  fs.c  fs.js  image2cs.c  image2cs.js  main.c  mcbundle.js  mcconfig.js  mcdevicetree.js  mchex.js  mclocal.js  mcmanifest.js  mcpack.c  mcpack.js  mcprintski.js  mcrez.js  mcrun.js  mczephyr.js  nodered2mcu.js  png2bmp.js  resampler.js  rle4encode.js  skip-flash.py  tool.c  tool.h  tool.js  unicode-ranges.js  (+4 more)
typings/: ChatAudioIO.d.ts  Resource.d.ts  base64.d.ts  ble.d.ts  console.d.ts  crc.d.ts  crypt.d.ts  debug.d.ts  deepEqual.d.ts  deflate.d.ts  deflate.ts  display.d.ts  dns.d.ts  easing.d.ts  file.d.ts  flash.d.ts  global.d.ts  headers.d.ts  hex.d.ts  http.d.ts  inflate.d.ts  instrumentation.d.ts  mcpack.d.ts  mdns.d.ts  modules.d.ts  neopixel.d.ts  neostrand.d.ts  net.d.ts  package.json  ping.d.ts  preference.d.ts  qrcode.d.ts  resource.d.ts  securesocket.d.ts  serial.d.ts  sntp.d.ts  socket.d.ts  structuredClone.d.ts  telnet.d.ts  time.d.ts  (+10 more)
(+4522 files in other folders)
